<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back">


    <RelativeLayout
        android:id="@+id/rel_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/transition">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white"
            android:textSize="70sp" />

        <Button
            android:id="@+id/play"
            android:layout_width="200sp"
            android:layout_height="50sp"
            android:layout_below="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="34dp"
            android:background="@drawable/button_black"
            android:text="@string/play"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/options"
            android:layout_width="200sp"
            android:layout_height="50sp"
            android:layout_alignLeft="@+id/play"
            android:layout_alignStart="@+id/play"
            android:layout_below="@+id/play"
            android:layout_marginTop="25dp"
            android:background="@drawable/button_black"
            android:text="@string/options"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/highScores"
            android:layout_width="200sp"
            android:layout_height="50sp"
            android:layout_alignLeft="@+id/options"
            android:layout_alignStart="@+id/options"
            android:layout_below="@+id/options"
            android:layout_marginTop="25dp"
            android:background="@drawable/button_black"
            android:text="@string/high_scores"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/about"
            android:layout_width="200sp"
            android:layout_height="50sp"
            android:layout_alignEnd="@+id/highScores"
            android:layout_alignRight="@+id/highScores"
            android:layout_below="@+id/highScores"
            android:layout_marginTop="25dp"
            android:background="@drawable/button_black"
            android:text="@string/about"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/MyAccountButton"
            android:layout_width="70sp"
            android:layout_height="50sp"
            android:background="@drawable/button_black"
            android:text="Account"
            android:textColor="@android:color/white"
            android:layout_above="@+id/textView"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/credit"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white"
            android:textSize="17sp"
            android:layout_alignParentBottom="true"
            android:layout_alignLeft="@+id/about"
            android:layout_alignStart="@+id/about" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_centerHorizontal="true"
            android:text="@string/tag_line"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white"
            android:textSize="17sp" />

    </RelativeLayout>
</LinearLayout>